--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,17 @@
-
-FROM node:18-alpine
-
-# Set working directory
+# Use multi-stage build
+FROM node:18 AS builder
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package.json package-lock.json ./
-
-# Install dependencies
-RUN npm install --production
+COPY package*.json ./
+RUN npm install   # installs deps + devDeps
+COPY . .
 RUN npm run build
 
-# Copy the rest of the application code
-COPY dist ./dist/
+# production image
+FROM node:18
+WORKDIR /app
+COPY --from=builder /app/dist ./dist
+COPY package*.json ./
+RUN npm install --only=production
 
-# Expose the port the app runs on
-EXPOSE 5000
-
-# Start the server
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/index.js"]
