--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,42 @@
-# Use multi-stage build
-FROM node:18 AS builder
+# Use multi-stage build for optimal production image
+FROM node:18-alpine AS builder
+
+# Install pnpm globally
+RUN npm install -g pnpm
+
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install   # installs deps + devDeps
+# Copy package files
+COPY package.json pnpm-lock.yaml ./
+
+# Install all dependencies (including devDependencies for build)
+RUN pnpm install --frozen-lockfile
+
+# Copy source code
 COPY . .
-RUN npm run build
 
-# production image
-FROM node:18
+# Build the TypeScript code
+RUN pnpm run build
+
+# Production stage
+FROM node:18-alpine AS production
+
+# Install pnpm globally
+RUN npm install -g pnpm
+
 WORKDIR /app
-COPY --from=builder /app/dist ./dist
-COPY package*.json ./
-RUN npm install --only=production
 
-CMD ["node", "dist/index.js"]
+# Copy package files
+COPY package.json pnpm-lock.yaml ./
+
+# Install only production dependencies
+RUN pnpm install --frozen-lockfile --prod
+
+# Copy built application from builder stage
+COPY --from=builder /app/dist ./dist
+
+# Expose the port
+EXPOSE 5000
+
+# Start the application
+CMD ["node", "dist/main.js"]
