refactor Dockerfile to simplify build process and remove pnpm installation

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,20 @@
 # Use multi-stage build for optimal production image
 FROM node:18-alpine AS builder
 
-# Install pnpm globally
-RUN npm install -g pnpm typescript
-
 WORKDIR /app
 
 # Copy package files
-COPY package.json pnpm-lock.yaml ./
+COPY package.json  ./
+
+
+# Install pnpm globally
+RUN npm install
 
 # Copy source code
 COPY . .
 
 # Build the TypeScript code
-RUN pnpm run build
-
-# Production stage
-FROM node:18-alpine AS production
-
-# Install pnpm globally
-RUN npm install -g pnpm typescript
-
-WORKDIR /app
-
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
-
-# Copy built application from builder stage
-COPY --from=builder /app/dist ./dist
+RUN npm run build
 
 # Expose the port
 EXPOSE 5000
